:heavy_check_mark: Сборка #2

--- a/2/catalog.html
+++ b/2/catalog.html
@@ -8,6 +8,9 @@
   <body class="page__body">
 
     <header class="header">
+      <a class="logo-sedona" href="#">
+        <img class="logo-sedona__position" src="img/logo-sedona.svg" width="185" height="96" alt="Логотип Cедоны.">
+      </a>
       <nav class="navigation">
         <button class="navigation__toggle navigation-toggle" type="button">
           <span class="visually-hidden">Открыть меню.</span>
@@ -19,18 +22,13 @@
         <div class="navigation__container">
           <ul class="navigation__list site-list">
             <li class="site-list__item">
-              <a class="navigation-link" href="source/index.html">Главная</a>
+              <a class="navigation-link" href="index.html">Главная</a>
             </li>
             <li class="site-list__item">
               <a class="navigation-link" href="#">Фото и видео</a>
             </li>
-            <li class="site-list__logo">
-              <a class="logo-sedona" href="#">
-                <img class="logo-sedona__position" src="source/img/logo-sedona.svg" width="185" height="96" alt="Логотип Cедоны.">
-              </a>
-            </li>
             <li class="site-list__item">
-              <a class="navigation-link" href="source/form.html">Форма отзыва</a>
+              <a class="navigation-link" href="form.html">Форма отзыва</a>
             </li>
             <li class="site-list__item">
               <a class="navigation-link" href="#">HTML ACADEMY</a>
@@ -115,7 +113,7 @@
         <div class="footer__copyright copyright">
           <span class="copyright__text description">Разработано</span>
           <a class="copyright__link logo-academy" href="#">
-            <img class="logo-academy__position" src="source/img/htmlacademy.svg" width="" height="" alt="Логотип академии.">
+            <img class="logo-academy__position" src="img/htmlacademy.svg" width="27" height="34" alt="Логотип академии.">
           </a>
         </div>
       </div>
