--- a/2/index.html
+++ b/2/index.html
@@ -8,6 +8,9 @@
   <body class="page__body">
 
     <header class="header">
+      <a class="logo-sedona" href="#">
+        <img class="logo-sedona__position" src="img/logo-sedona.svg" width="185" height="96" alt="Логотип Cедоны.">
+      </a>
       <nav class="navigation">
         <button class="navigation__toggle navigation-toggle" type="button">
           <span class="visually-hidden">Открыть меню.</span>
@@ -22,15 +25,10 @@
               <a class="navigation-link" href="#">Главная</a>
             </li>
             <li class="site-list__item">
-              <a class="navigation-link" href="source/catalog.html">Фото и видео</a>
-            </li>
-            <li class="site-list__logo">
-              <a class="logo-sedona" href="#">
-                <img class="logo-sedona__position" src="source/img/logo-sedona.svg" width="185" height="96" alt="Логотип Cедоны.">
-              </a>
+              <a class="navigation-link" href="catalog.html">Фото и видео</a>
             </li>
             <li class="site-list__item">
-              <a class="navigation-link" href="source/form.html">Форма отзыва</a>
+              <a class="navigation-link" href="form.html">Форма отзыва</a>
             </li>
             <li class="site-list__item">
               <a class="navigation-link" href="#">HTML ACADEMY</a>
@@ -53,52 +51,56 @@
           <p class="advantages__description description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         </div>
 
-        <div class="advantages-container advantages-container--color">
-          <h3 class="advantages__title title title--color">Настоящий городок</h3>
-          <span class="advantages__description description description--color">№1</span>
-          <p class="advantages__description description description--color">Седона не аттракцион для туристов, там течет своя жизнь </p>
-          <img class="advantages__image" src="#" width="" height="" alt="">
-        </div>
+        <ul class="advantages__list advantages-list">
+          <li class="advantages-container advantages-container--color">
+            <h3 class="advantages__title title title--color">Настоящий городок</h3>
+            <span class="advantages__description description description--color">№1</span>
+            <p class="advantages__description description description--color">Седона не аттракцион для туристов, там течет своя жизнь </p>
+            <img class="advantages__image" src="#" width="" height="" alt="">
+          </li>
 
-        <ul class="advantages__list">
-          <li class="advantages__item advantages__item--house">
-            <h4 class="advantages__title title">Жилье</h4>
-            <p class="advantages__description description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          <li class="advantages-container">
+            <ul class="advantages__list-service list-service">
+              <li class="list-service__item list-service__item--house">
+                <h4 class="list-service__title title">Жилье</h4>
+                <p class="list-service__description description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+              </li>
+              <li class="list-service__item list-service__item--food">
+                <h4 class="list-service__title title">Еда</h4>
+                <p class="list-service__description description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              </li>
+              <li class="list-service__item list-service__item--souvenir">
+                <h4 class="list-service__title title">Сувениры</h4>
+                <p class="list-service__description description">Не только китайского, но и местного производства!</p>
+              </li>
+            </ul>
           </li>
-          <li class="advantages__item advantages__item--food">
-            <h4 class="advantages__title title">Еда</h4>
-            <p class="advantages__description description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+
+          <li class="advantages-container advantages-container--color">
+            <img class="advantages__image" src="#" width="" height="" alt="">
+            <h3 class="advantages__title title title--color">Там есть мост дьявола</h3>
+            <span class="advantages__description description description--color">№2</span>
+            <p class="advantages__description description description--color">Да, по нему можно пройтись! Если вы осмелитесь, конечно</p>
           </li>
-          <li class="advantages__item advantages__item--souvenir">
-            <h4 class="advantages__title title">Сувениры</h4>
-            <p class="advantages__description description">Не только китайского, но и местного производства!</p>
+
+          <li class="advantages-container">
+            <h3 class="advantages__title title">Небольшая площадь</h3>
+            <span class="advantages__description">№3</span>
+            <p class="advantages__description description">Все интересные места находятся очень близко</p>
+          </li>
+
+          <li class="advantages-container">
+            <h3 class="advantages__title title">Красивая дорога</h3>
+            <span class="advantages__description">№4</span>
+            <p class="advantages__description description">Ехать в сторону Лас-Вегаса совсем скучно!</p>
+          </li>
+
+          <li class="advantages-container">
+            <h3 class="advantages__title title">Мало туристов</h3>
+            <span class="advantages__description">№5</span>
+            <p class="advantages__description description">Большинство едет в гранд каньон и толпится там</p>
           </li>
         </ul>
-
-        <div class="advantages-container advantages-container--color">
-          <img class="advantages__image" src="#" width="" height="" alt="">
-          <h3 class="advantages__title title title--color">Там есть мост дьявола</h3>
-          <span class="advantages__description description description--color">№2</span>
-          <p class="advantages__description description description--color">Да, по нему можно пройтись! Если вы осмелитесь, конечно</p>
-        </div>
-
-        <div class="advantages-container">
-          <h3 class="advantages__title title">Небольшая площадь</h3>
-          <span class="advantages__description">№3</span>
-          <p class="advantages__description description">Все интересные места находятся очень близко</p>
-        </div>
-
-        <div class="advantages-container">
-          <h3 class="advantages__title title">Красивая дорога</h3>
-          <span class="advantages__description">№4</span>
-          <p class="advantages__description description">Ехать в сторону Лас-Вегаса совсем скучно!</p>
-        </div>
-
-        <div class="advantages-container">
-          <h3 class="advantages__title title">Мало туристов</h3>
-          <span class="advantages__description">№5</span>
-          <p class="advantages__description description">Большинство едет в гранд каньон и толпится там</p>
-        </div>
       </section>
 
       <section class="search-hotel">
@@ -111,7 +113,7 @@
     <footer class="footer">
       <div class="footer__container">
         <div class="footer__map map-contact">
-          <img class="map-contact__position" src="source/img/map-mobile.jpg" width="320" height="350" alt="Карта.">
+          <img class="map-contact__position" src="img/map-mobile.jpg" width="320" height="350" alt="Карта.">
         </div>
         <span class="footer__hashtag title title--big">#visitsedona</span>
         <ul class="footer__container__list social-list">
@@ -128,7 +130,7 @@
         <div class="footer__copyright copyright">
           <span class="copyright__text description">Разработано</span>
           <a class="copyright__link logo-academy" href="#">
-            <img class="logo-academy__position" src="source/img/htmlacademy.svg" width="" height="" alt="Логотип академии.">
+            <img class="logo-academy__position" src="img/htmlacademy.svg" width="27" height="34" alt="Логотип академии.">
           </a>
         </div>
       </div>
