--- a/2/form.html
+++ b/2/form.html
@@ -8,6 +8,9 @@
   <body class="page__body">
 
     <header class="header">
+      <a class="logo-sedona" href="#">
+        <img class="logo-sedona__position" src="img/logo-sedona.svg" width="185" height="96" alt="Логотип Cедоны.">
+      </a>
       <nav class="navigation">
         <button class="navigation__toggle navigation-toggle" type="button">
           <span class="visually-hidden">Открыть меню.</span>
@@ -19,16 +22,12 @@
         <div class="navigation__container">
           <ul class="navigation__list site-list">
             <li class="site-list__item">
-              <a class="navigation-link" href="source/index.html">Главная</a>
+              <a class="navigation-link" href="index.html">Главная</a>
             </li>
             <li class="site-list__item">
-              <a class="navigation-link" href="source/catalog.html">Фото и видео</a>
+              <a class="navigation-link" href="catalog.html">Фото и видео</a>
             </li>
-            <li class="site-list__logo">
-              <a class="logo-sedona" href="#">
-                <img class="logo-sedona__position" src="source/img/logo-sedona.svg" width="185" height="96" alt="Логотип Cедоны.">
-              </a>
-            </li>
+
             <li class="site-list__item">
               <a class="navigation-link" href="#">Форма отзыва</a>
             </li>
@@ -65,7 +64,7 @@
             </label>
             <label class="fieldset-review__label label-form">
               <span class="label-form__description description">Отчество*:</span>
-              <input class="label-form__input input-review" type="text" value="Викторович" name="patronymic" placeholder="Отчество" required>
+              <input class="label-form__input input-review" type="text" value="Викторович" name="patronymic" placeholder="Отчество">
             </label>
           </fieldset>
 
@@ -78,7 +77,7 @@
             </label>
             <label class="fieldset-review__label label-form">
               <span class="label-form__description description">Электронная почта*:</span>
-              <input class="label-form__input input-review" type="email" name="email" placeholder="Введите e-mail">
+              <input class="label-form__input input-review" type="email" name="email" placeholder="Введите e-mail" required>
               <span class="label-form__icon icon-review-email"></span>
             </label>
           </fieldset>
@@ -151,7 +150,7 @@
         <div class="footer__copyright copyright">
           <span class="copyright__text description">Разработано</span>
           <a class="copyright__link logo-academy" href="#">
-            <img class="logo-academy__position" src="source/img/htmlacademy.svg" width="" height="" alt="Логотип академии.">
+            <img class="logo-academy__position" src="img/htmlacademy.svg" width="27" height="34" alt="Логотип академии.">
           </a>
         </div>
       </div>
