--- a/source/index.html
+++ b/source/index.html
@@ -19,12 +19,20 @@
             <button class="header__burger" type="button">
               <img src="img/icon-menu.svg" alt="раскрывающееся меню.">
             </button>
-            <div class="header__menu">
-              <a class="header__link" href="#">Главная</a>
-              <a class="header__link" href="catalog.html">Фото и видео</a>
-              <a class="header__link" href="form.html">Форма отзыва</a>
-              <a class="header__link" href="https://htmlacademy.ru">HTML ACADEMY</a>
-            </div>
+            <ul class="header__list">
+              <li class="header__item">
+                <a class="header__link" href="#">Главная</a>
+              </li>
+              <li class="header__item">
+                <a class="header__link" href="catalog.html">Фото и видео</a>
+              </li>
+              <li class="header__item">
+                <a class="header__link" href="form.html">Форма отзыва</a>
+              </li>
+              <li class="header__item">
+                <a class="header__link" href="https://htmlacademy.ru">HTML ACADEMY</a>
+              </li>
+            </ul>
           </nav>
         </div>
       </header>
@@ -80,7 +88,7 @@
 
             <li class="advantages__item">
               <div class="advantages__container advantages__container--grey">
-                <h3 class="advantages__title">Небольшая площадь</h3>
+                <h3 class="advantages__title">Небольшая <br> площадь</h3>
                 <span class="advantages__description">№3</span>
                 <p class="advantages__description">Все интересные места находятся очень близко</p>
               </div>
@@ -88,7 +96,7 @@
 
             <li class="advantages__item">
               <div class="advantages__container advantages__container--grey">
-                <h3 class="advantages__title">Красивая дорога</h3>
+                <h3 class="advantages__title">Красивая <br> дорога</h3>
                 <span class="advantages__description">№4</span>
                 <p class="advantages__description">Ехать в сторону Лас-Вегаса совсем скучно!</p>
               </div>
@@ -96,7 +104,7 @@
 
             <li class="advantages__item">
               <div class="advantages__container advantages__container--grey">
-                <h3 class="advantages__title">Мало туристов</h3>
+                <h3 class="advantages__title">Мало <br> туристов</h3>
                 <span class="advantages__description">№5</span>
                 <p class="advantages__description">Большинство едет в гранд каньон и толпится там</p>
               </div>
@@ -105,8 +113,10 @@
         </section>
 
         <div class="search-hotel">
-          <h2 class="search-hotel__title">Заинтересовались?</h2>
-          <p class="search-hotel__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+          <div class="search-hotel__container">
+            <h2 class="search-hotel__title">Заинтересовались?</h2>
+            <p class="search-hotel__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+          </div>
           <a class="search-hotel__link " href="form.html">Найти гостиницу</a>
         </div>
       </main>
