--- a/source/form.html
+++ b/source/form.html
@@ -14,10 +14,8 @@
           <img src="img/logo-sedona.svg" width="185" height="96" alt="Логотип Cедоны.">
         </a>
 
-        <nav class="header__nav">
-          <button class="header__burger" type="button">
-            <img src="img/icon-menu.svg" alt="раскрывающееся меню.">
-          </button>
+        <nav class="header__nav header__nav--closed header__nav--nojs">
+          <button class="header__burger" type="button"></button>
           <ul class="header__list">
             <li class="header__item">
               <a class="header__link" href="index.html">Главная</a>
@@ -26,7 +24,7 @@
               <a class="header__link" href="catalog.html">Фото и видео</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="#">Форма отзыва</a>
+              <a class="header__link header__link--current" href="#">Форма отзыва</a>
             </li>
             <li class="header__item">
               <a class="header__link" href="https://htmlacademy.ru">HTML ACADEMY</a>
@@ -69,49 +67,62 @@
               <label class="label-form">
                 <span class="label-form__description">Контактный телефон*:</span>
                 <input class="label-form__input" type="tel" name="phone number" placeholder="Введите телефон" required>
-                <span class="label-form__icon"></span>
               </label>
               <label class="label-form">
                 <span class="label-form__description">Электронная почта*:</span>
                 <input class="label-form__input" type="email" name="email" placeholder="Введите e-mail" required>
-                <span class="label-form__icon"></span>
               </label>
             </fieldset>
 
             <fieldset class="form__fieldset">
               <legend class="form__fieldset-legend">Ваше общее впечатление:</legend>
-              <label class="label-form label-form__container">
-                <input class="label-form__radio" type="radio" value="Скорее положительное" name="impression" checked>
-                <span class="label-form__title">Скорее положительное</span>
-              </label>
-              <label class="label-form label-form__container">
-                <input class="label-form__radio" type="radio" value="Скорее отрицательное" name="impression">
-                <span class="label-form__title">Скорее отрицательное</span>
-              </label>
-              <label class="label-form label-form__container">
-                <input class="label-form__radio" type="radio" value="Затрудняюсь ответить" name="impression">
-                <span class="label-form__title">Затрудняюсь ответить</span>
-              </label>
+              <div class="form__fieldset-container form__fieldset-container--radio">
+                <label class="label-form label-form__container">
+                  <input class="label-form__input visually-hidden" type="radio" value="Скорее положительное" name="impression" checked>
+                  <span class="label-form__radio"></span>
+                  <span class="label-form__title">Скорее положительное</span>
+                </label>
+                <label class="label-form label-form__container">
+                  <input class="label-form__input visually-hidden" type="radio" value="Скорее отрицательное" name="impression">
+                  <span class="label-form__radio"></span>
+                  <span class="label-form__title">Затрудняюсь ответить</span>
+                </label>
+              </div>
+              <div class="form__fieldset-container form__fieldset-container--radio">
+                <label class="label-form label-form__container">
+                  <input class="label-form__input visually-hidden" type="radio" value="Затрудняюсь ответить" name="impression">
+                  <span class="label-form__radio"></span>
+                  <span class="label-form__title">Скорее отрицательное</span>
+                </label>
+              </div>
             </fieldset>
 
             <fieldset class="form__fieldset">
               <legend class="form__fieldset-legend">Посещенные <br> достопримечательности:</legend>
-              <label class="label-form label-form__container">
-                <input class="label-form__mark" type="checkbox" value="Мост Дьявола" name="visited attractions" checked>
-                <span class="label-form__title">Мост Дьявола</span>
-              </label>
-              <label class="label-form label-form__container">
-                <input class="label-form__mark" type="checkbox" value="Гора-Колокол" name="visited attractions" checked>
-                <span class="label-form__title">Гора-Колокол</span>
-              </label>
-              <label class="label-form label-form__container">
-                <input class="label-form__mark" type="checkbox" value="Слайд-парк" name="visited attractions" checked>
-                <span class="label-form__title">Слайд-парк</span>
-              </label>
-              <label class="label-form label-form__container">
-                <input class="label-form__mark" type="checkbox" value="Красные скалы" name="visited attractions">
-                <span class="label-form__title">Красные скалы</span>
-              </label>
+              <div class="form__fieldset-container">
+                <label class="label-form label-form__container">
+                  <input class="label-form__input visually-hidden" type="checkbox" value="Мост Дьявола" name="visited attractions" checked>
+                  <span class="label-form__mark"></span>
+                  <span class="label-form__title">Мост Дьявола</span>
+                </label>
+                <label class="label-form label-form__container">
+                  <input class="label-form__input visually-hidden" type="checkbox" value="Гора-Колокол" name="visited attractions" checked>
+                  <span class="label-form__mark"></span>
+                  <span class="label-form__title">Слайд-парк</span>
+                </label>
+              </div>
+              <div class="form__fieldset-container">
+                <label class="label-form label-form__container">
+                  <input class="label-form__input visually-hidden" type="checkbox" value="Слайд-парк" name="visited attractions" checked>
+                  <span class="label-form__mark"></span>
+                  <span class="label-form__title">Гора-Колокол</span>
+                </label>
+                <label class="label-form label-form__container">
+                  <input class="label-form__input visually-hidden" type="checkbox" value="Красные скалы" name="visited attractions">
+                  <span class="label-form__mark"></span>
+                  <span class="label-form__title">Красные скалы</span>
+                </label>
+              </div>
             </fieldset>
 
             <fieldset class="form__fieldset">
@@ -134,25 +145,25 @@
           <span class="footer__hashtag">#visitsedona</span>
           <ul class="footer__social-list">
             <li class="footer__social-item">
-              <a class="footer__icon-vkontakte" href="https://vk.com/htmlacademy">
+              <a class="footer__link" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Вконтакте.</span>
-                <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="footer__icon" width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M23.45 0.948C23.616 0.402 23.45 0 22.655 0H20.03C19.362 0 19.054 0.347 18.887 0.73C18.887 0.73 17.552 3.926 15.661 6.002C15.049 6.604 14.771 6.795 14.437 6.795C14.27 6.795 14.019 6.604 14.019 6.057V0.948C14.019 0.292 13.835 0 13.279 0H9.151C8.734 0 8.483 0.304 8.483 0.593C8.483 1.214 9.429 1.358 9.526 3.106V6.904C9.526 7.737 9.373 7.888 9.039 7.888C8.149 7.888 5.984 4.677 4.699 1.003C4.45 0.288 4.198 0 3.527 0H0.9C0.15 0 0 0.347 0 0.73C0 1.412 0.89 4.8 4.145 9.281C6.315 12.341 9.37 14 12.153 14C13.822 14 14.028 13.632 14.028 12.997V10.684C14.028 9.947 14.186 9.8 14.715 9.8C15.105 9.8 15.772 9.992 17.33 11.467C19.11 13.216 19.403 14 20.405 14H23.03C23.78 14 24.156 13.632 23.94 12.904C23.702 12.18 22.852 11.129 21.725 9.882C21.113 9.172 20.195 8.407 19.916 8.024C19.527 7.533 19.638 7.314 19.916 6.877C19.916 6.877 23.116 2.451 23.449 0.948H23.45Z" fill="white"/>
                 </svg>
               </a>
             </li>
             <li class="footer__social-item">
-              <a class="footer__icon-telegram" href="https://t.me/htmlacademy">
+              <a class="footer__link" href="https://t.me/htmlacademy">
                 <span class="visually-hidden">Телеграм.</span>
-                <svg width="22" height="18" viewBox="0 0 22 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="footer__icon" width="22" height="18" viewBox="0 0 22 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M21.4393 1.62225L18.2705 16.566C18.0313 17.6205 17.408 17.883 16.5223 17.3865L11.6938 13.8285L9.36425 16.0695C9.10626 16.3275 8.891 16.5428 8.39375 16.5428L8.741 11.6258L17.6893 3.54C18.0785 3.1935 17.6045 3.00075 17.0848 3.348L6.02225 10.314L1.25976 8.823C0.224006 8.49975 0.205256 7.78725 1.47576 7.29L20.1035 0.113253C20.966 -0.209997 21.7205 0.305253 21.4393 1.623V1.62225Z" fill="white"/>
                 </svg>
               </a>
             </li>
             <li class="footer__social-item">
-              <a class="footer__icon-youtube" href="https://www.youtube.com/user/htmlacademyru">
+              <a class="footer__link" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">Ютуб.</span>
-                <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="footer__icon" width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M17.1813 0H2.81331C1.30618 0 0 1.3 0 2.8V11.1C0 12.7 1.30618 14 2.81331 14H17.1813C18.7889 14 19.9946 12.7 19.9946 11.2V2.8C20.095 1.3 18.7889 0 17.1813 0ZM7.03326 10.4V3.6L13.8656 7L7.03326 10.4Z" fill="white"/>
                 </svg>
               </a>
@@ -161,7 +172,10 @@
           <div class="footer__copyright">
             <span class="footer__copyright-text">Разработано</span>
             <a class="footer__copyright-link" href="#">
-              <img src="img/logo-htmlacademy.svg" width="27" height="34" alt="Логотип академии.">
+              <span class="visually-hidden">Лотип академии.</span>
+              <svg class="footer__logo-academy" width="27" height="35" viewBox="0 0 27 35" xmlns="http://www.w3.org/2000/svg">
+                <path d="M13.65 0.449951H13.55L0.0500031 1.84995V26.55L13.55 34.5499L26.95 26.55V1.84995L13.65 0.449951ZM25.05 12.55L13.55 5.74995V5.64995H13.45L13.35 5.54995V5.64995L1.95 12.55V3.54995L13.45 2.34995L25.05 3.54995V12.55ZM13.45 7.24995L24.95 13.95L20.45 16.55L13.35 12.35V13.75L19.25 17.25L18.35 17.75L13.35 14.75V16.15L17.15 18.45L16.35 18.95L13.35 17.15V18.55L15.25 19.65L13.45 20.75L2.05 14.05L13.45 7.24995ZM1.95 15.55L13.35 22.35V23.35L5.45 18.65V20.05L13.45 24.85V25.95L5.45 21.25V22.65L13.45 27.45L21.55 22.55V17.35L24.95 15.35V25.35L13.45 32.25L1.95 25.45V15.55Z"/>
+              </svg>
             </a>
           </div>
         </div>
@@ -178,5 +192,6 @@
       <p class="modal-suksessfull__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
       <button class="button">Закрыть окно</button>
     </div>
+    <script src="js/script.js"></script>
   </body>
 </html>
