--- a/source/form.html
+++ b/source/form.html
@@ -50,15 +50,15 @@
               <legend class="form__fieldset-legend">Представьтесь:</legend>
               <label class="label-form">
                 <span class="label-form__description">Имя*:</span>
-                <input class="label-form__input" type="text" value="Петр" name="name" placeholder="Имя" required>
+                <input class="label-form__input label-form__input--width" type="text" value="Петр" name="name" placeholder="Имя" required>
               </label>
               <label class="label-form">
                 <span class="label-form__description">Фамилия*:</span>
-                <input class="label-form__input" type="text" value="Пустота" name="second name" placeholder="Фамилия" required>
+                <input class="label-form__input label-form__input--width" type="text" value="Пустота" name="second name" placeholder="Фамилия" required>
               </label>
               <label class="label-form">
                 <span class="label-form__description">Отчество*:</span>
-                <input class="label-form__input" type="text" value="Викторович" name="patronymic" placeholder="Отчество">
+                <input class="label-form__input label-form__input--width" type="text" value="Викторович" name="patronymic" placeholder="Отчество">
               </label>
             </fieldset>
 
@@ -66,11 +66,11 @@
               <legend class="form__fieldset-legend">Контактная информация:</legend>
               <label class="label-form">
                 <span class="label-form__description">Контактный телефон*:</span>
-                <input class="label-form__input" type="tel" name="phone number" placeholder="Введите телефон" required>
+                <input class="label-form__input label-form__input--width" type="tel" name="phone number" placeholder="Введите телефон" required>
               </label>
               <label class="label-form">
                 <span class="label-form__description">Электронная почта*:</span>
-                <input class="label-form__input" type="email" name="email" placeholder="Введите e-mail" required>
+                <input class="label-form__input label-form__input--width" type="email" name="email" placeholder="Введите e-mail" required>
               </label>
             </fieldset>
 
