--- a/source/form.html
+++ b/source/form.html
@@ -135,7 +135,7 @@
             <fieldset class="form__fieldset">
               <legend class="form__fieldset-legend">Опишите свои эмоции:</legend>
               <label class="label-form">
-                <textarea class="label-form__text" name="description of emotions" placeholder="Опишите подробно все свои восторги"></textarea>
+                <textarea class="label-form__text" name="description of emotions" placeholder="Опишите подробно все свои восторги" resize: none></textarea>
               </label>
             </fieldset>
 
