--- a/source/catalog.html
+++ b/source/catalog.html
@@ -54,9 +54,9 @@
           <ul class="gallery__container gallery-list">
             <li class="gallery-list__item">
               <picture>
-                <source media="(min-width: 1200px)" srcset="img/photo-road-desktop.png 1x, img/photo-road-desktop@2x.png 2x" width="1200" height="400">
-                <source media="(min-width: 768px)" srcset="img/photo-road-tablet.png 1x, img/photo-road-tablet@2x.png 2x" width="648" height="400">
-                <img class="advantages__image" src="img/photo-road-mobile.png 1x" srcset="img/photo-road-mobile@2x.png 2x" width="280" height="280" alt="Вид на шоссе.">
+                <source media="(min-width: 1200px)" srcset="img/photo-road-desktop.jpg 1x, img/photo-road-desktop@2x.jpg 2x" width="1200" height="400">
+                <source media="(min-width: 768px)" srcset="img/photo-road-tablet.jpg 1x, img/photo-road-tablet@2x.jpg 2x" width="648" height="400">
+                <img class="advantages__image" src="img/photo-road-mobile.jpg 1x" srcset="img/photo-road-mobile_2x.jpg 2x" width="280" height="280" alt="Вид на шоссе.">
               </picture>
               <div class="gallery-list__item-container">
                 <div class="gallery-list__item-container-description">
@@ -74,9 +74,9 @@
 
             <li class="gallery-list__item">
               <picture>
-                <source media="(min-width: 1200px)" srcset="img/photo-plant-desktop.png 1x, img/photo-plant-desktop@2x.png 2x" width="400" height="400">
-                <source media="(min-width: 768px)" srcset="img/photo-plant-tablet.png 1x, img/photo-plant-tablet@2x.png 2x" width="324" height="267">
-                <img class="advantages__image" src="img/photo-plant-mobile.png 1x" srcset="img/photo-plant-mobile@2x.png 2x" width="280" height="280" alt="Местная растительность.">
+                <source media="(min-width: 1200px)" srcset="img/photo-plant-desktop.jpg 1x, img/photo-plant-desktop@2x.jpg 2x" width="400" height="400">
+                <source media="(min-width: 768px)" srcset="img/photo-plant-tablet.jpg 1x, img/photo-plant-tablet@2x.jpg 2x" width="324" height="267">
+                <img class="advantages__image" src="img/photo-plant-mobile.jpg 1x" srcset="img/photo-plant-mobile@2x.jpg 2x" width="280" height="280" alt="Местная растительность.">
               </picture>
               <div class="gallery-list__item-container">
                 <div class="gallery-list__item-container-description">
@@ -94,9 +94,9 @@
 
             <li class="gallery-list__item">
               <picture>
-                <source media="(min-width: 1200px)" srcset="img/photo-forest-desktop.png 1x, img/photo-forest-desktop@2x.png 2x" width="400" height="400">
-                <source media="(min-width: 768px)" srcset="img/photo-forest-tablet.png 1x, img/photo-forest-tablet@2x.png 2x" width="324" height="267">
-                <img class="advantages__image" src="img/photo-forest-mobile.png 1x" srcset="img/photo-forest-mobile@2x.png 2x" width="280" height="280" alt="Лес.">
+                <source media="(min-width: 1200px)" srcset="img/photo-forest-desktop.jpg 1x, img/photo-forest-desktop@2x.jpg 2x" width="400" height="400">
+                <source media="(min-width: 768px)" srcset="img/photo-forest-tablet.jpg 1x, img/photo-forest-tablet@2x.jpg 2x" width="324" height="267">
+                <img class="advantages__image" src="img/photo-forest-mobile.jpg 1x" srcset="img/photo-forest-mobile@2x.jpg 2x" width="280" height="280" alt="Лес.">
               </picture>
               <div class="gallery-list__item-container">
                 <div class="gallery-list__item-container-description">
@@ -114,9 +114,9 @@
 
             <li class="gallery-list__item">
               <picture>
-                <source media="(min-width: 1200px)" srcset="img/photo-clif-desktop.png 1x, img/photo-clif-desktop@2x.png 2x" width="400" height="400">
-                <source media="(min-width: 768px)" srcset="img/photo-clif-tablet.png 1x, img/photo-clif-tablet@2x.png 2x" width="324" height="267">
-                <img class="advantages__image" src="img/photo-clif-mobile.png 1x" srcset="img/photo-clif-mobile@2x.png 2x" width="280" height="280" alt="Ущелье.">
+                <source media="(min-width: 1200px)" srcset="img/photo-clif-desktop.jpg 1x, img/photo-clif-desktop@2x.jpg 2x" width="400" height="400">
+                <source media="(min-width: 768px)" srcset="img/photo-clif-tablet.jpg 1x, img/photo-clif-tablet@2x.jpg 2x" width="324" height="267">
+                <img class="advantages__image" src="img/photo-clif-mobile.jpg 1x" srcset="img/photo-clif-mobile@2x.jpg 2x" width="280" height="280" alt="Ущелье.">
               </picture>
               <div class="gallery-list__item-container">
                 <div class="gallery-list__item-container-description">
@@ -135,7 +135,14 @@
           <div class="gallery__record">
             <h2 class="gallery__record-title">Все еще сомневаетесь?</h2>
             <p class="gallery__record-description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
-            <img src="img/record-img.jpg" alt="Видео поездки." width="280" height="177">
+            <a class="">
+              <span class="gallery__record-play"></span>
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/video-desktop.jpg 1x, img/video-desktop@2x.jpg 2x" width="800" height="500">
+                <source media="(min-width: 768px)" srcset="img/video-tablet.jpg 1x, img/video-tablet@2x.jpg 2x" width="648" height="500">
+                <img src="img/video-mobile.jpg 1x" srcset="img/video-mobile@2x.jpg 2x" width="280" height="177" alt="Видео поездки.">
+              </picture>
+            </a>
           </div>
         </section>
       </main>
