--- a/source/index.html
+++ b/source/index.html
@@ -61,9 +61,9 @@
                 <p class="advantages__description advantages__description--color">Седона не аттракцион для туристов, там течет своя жизнь </p>
               </div>
               <picture>
-                <source media="(min-width: 1200px)" srcset="img/photo-city-desktop.png 1x, img/photo-city-desktop@2x.png 2x" width="800" height="256">
-                <source media="(min-width: 768px)" srcset="img/photo-city-tablet.png 1x, img/photo-city-tablet@2x.png 2x" width="512" height="256">
-                <img class="advantages__image" src="img/photo-city-mobile.png 1x" srcset="img/photo-city-mobile@2x.png 2x" width="320" height="260" alt="Вид на город Седона.">
+                <source media="(min-width: 1200px)" srcset="img/photo-city-desktop.jpg 1x, img/photo-city-desktop@2x.jpg 2x" width="800" height="256">
+                <source media="(min-width: 768px)" srcset="img/photo-city-tablet.jpg 1x, img/photo-city-tablet@2x.jpg 2x" width="512" height="256">
+                <img class="advantages__image" src="img/photo-city-mobile.jpg 1x" srcset="img/photo-city-mobile@2x.jpg 2x" width="320" height="260" alt="Вид на город Седона.">
               </picture>
             </li>
 
@@ -91,9 +91,9 @@
                 <p class="advantages__description advantages__description--color">Да, по нему можно пройтись! Если вы осмелитесь, конечно</p>
               </div>
               <picture>
-                <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop.png 1x, img/photo-bridge-desktop@2x.png 2x" width="800" height="256">
-                <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet.png 1x, img/photo-bridge-tablet@2x.png 2x" width="512" height="256">
-                <img class="advantages__image" src="img/photo-bridge-mobile.png 1x" srcset="img/photo-bridge-mobile@2x.png 2x" width="320" height="260" alt="Вид на ущелье.">
+                <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x" width="800" height="256">
+                <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet.jpg 1x, img/photo-bridge-tablet@2x.jpg 2x" width="512" height="256">
+                <img class="advantages__image" src="img/photo-bridge-mobile.jpg 1x" srcset="img/photo-bridge-mobile@2x.jpg 2x" width="320" height="260" alt="Вид на ущелье.">
               </picture>
             </li>
 
